archive/claim-cards/v274/schneeberg.md
# CLAIM CARD — schneeberg  (v274, seed 42, 160 steps)

**Anchor:** Schneeberg, Erzgebirgskreis (Saxony Ore Mountains), Germany — type locality for torbernite (1772), zeunerite (1872), uranospinite (1873), and ten more uranyl arsenate-phosphate species. Walpurgis Flacher vein, Weisser Hirsch Mine.
**Deposit:** Schneeberg / Erzgebirge oxidized uranium-pegmatite vein system (Walpurgis Flacher vein, Weisser Hirsch Mine, Saxony — type locality for torbernite, zeunerite, and uranospinite). A U-bearing pegmatite + chalcopyrite + arsenopyrite primary assemblage weathers under meteoric oxidation; the resulting uranyl + Cu + As fluid plates the autunite-group secondaries in two cation phases — Cu-rich first (torbernite emerald greens then zeunerite as As-pulse arrives), then Ca-dominant after Cu is consumed (autunite + uranospinite, the bright LW-UV fluorescent yellows).
**Initial:** 450 °C, 1.5 kbar, wall=tabular
**Model digest:** Pfluid:kbar-0.001..4.4|Ksp-pressure:SUPCRTBL-delta-logK-reaction-grid+density-mask+continuous-temperature-edge-hold+no-pressure-extrapolation-v2|sulfate-Ksp:USGS-PHREEQC-wateq4f-analytic5+explicit-temperature-envelope-v1|carbonate-rate:PWP-omega2over3-raw+production-positive-affinity-series-resistance-Aover1plusA+molarMgCa+pKwTP-hydroxycarbonates-v2|chemistry-evidence:ppm-mgkg-solvent+carbonate-equivalent-mass-labels-v1|SCI02-locality:PHREEQC-SUPCRTBL-anhydrite-classification+ledgered-carbonate-pulses-v1|aragonite-selector:hard-molarMgCa>=1.1-OR-explicit-open-spring+shallowP<=0.10kbar+40..100C-OR-Co5e-4..<1e-2molal+CoCa<0.6+20..30C-OR-highPstable-v5|aragonite-Sr:Wassenburg16-DSr1.38+/-0.53+accepted-zone-booked-return-v1|aragonite-Co:Barber75+GonzalezLopez18+equilibrium-and-effective-booked-DCo0.1+accepted-zone-booked-return-v2|CaCO3:Hacker05-negative-linear+/-1kbar|Prock:Pattison92-AndSil-16+/-3barC|stress:instant-resolved-shear-stable-grain-v2|event-fluid:locality-authored-material-transform+canonical-catalog-deep-match+owner-bound-MVT-90sulfide-30sulfate+receipted-exact-pore-fluid-export-replacement+atomic-heat-only-default-v4|elmwood-barite:explicit-sulfate-floor+receipted-Ba-hiatus-replacement+causal-next-pulse-masked-layers+terminal-clay-rind-v1|carbonate-boundary:PB82-dilute+DIC+reducedAlk+ideal-headspace+open-ledger+atomic-recharge+titration+accepted-zone-receipts+bulk-guard+equal-volume-mixed+solved-pCO2-uncertainty-v3|sphalerite-Ge:Belissont-Kd1708-cap22000-mass+dissolution-v2|gypsum-aw:ChirifeResnik84-NaCl-proxy-v1|silica-phase:Fournier-amorphous+chalcedony+quartz-Ostwald+reactive-pool+Manning94-grid-bounded-pressure+booked-transition+chemistry-competition-v5|surface-growth:all-cell-invalidated-exact-triangle-area+connected-patch+mass-booked-thickness+exact-shared-triangle-stratigraphy+executed-raycast+LOD-invariant-relief-v4|surface-anchor:position+void-normal+authenticated-triangle-barycentric+immutable-source-snapshot+constructor-fixed-production-provider+field-position-neighborhood-remap+separate-nearest-WallMesh-chemistry-projection+physical-host-anchor-inheritance+derived-live-remap-cache+exact-origin-edge-geodesic-occupancy+physical-normal-architecture-placement+source-qualified-fabrics+provider-timeline-replay+historical-helper-cursor+renderer-authority-lock+replay-shape-tessellation-fail-closed-v7|cavity-shape:seeded-exact-bubble-union+immutable-authored-radial-masks+pole-regular-sin2phi-cos2theta+analytic-pole-caps+digest-ledger-star-shaped-cartesian-production-v4|cavity-authority:default-before-water-chemistry-nucleation+fixed48-world-frame+zero-isovalue+Freudenthal-closed-manifold+signed-spacingOver4096-near-zero-scalar-floor+critical-contact-rejection+exact-volume-transaction+subresolution-chemistry-withheld+atomic-preflight+64-convergence+field-agreement+exact-contract-cache+semantic-startup-receipt+authenticated-replay-v4|water-boundary:mm-above-authenticated-current-floor+legacy-ring-to-authenticated-span-conversion+actual-vertex-chemistry-bands+topology-independent-wall-tint+field-clipped-interface+append-only-historical-appearance-ledger-v1|tiger-eye:HeaneyFisher03-antitaxial-crack-seal+GutzmerBeukesCairncross04-e44-surficial-alteration+BIF-physics-host+booked-NaFeSi-substrate+zeroSiO2-cumulative-O2closed-overprint+HF-only+local-tiger-iron+enum-fail-closed-v2|Mn-oxide-phase:birnessite-layer+Ba-romanechite-2x3+booked-birnessite-to-Mg-todorokite-3x3-at95-200C+pyrolusite-endmember-v2|CaSO4-phase:Hardie67-aw+P14.7Ckbar+single-evaluator+mass-balanced-replacement-v1|sulfur-ledger:sulfide+sulfate+elemental+declaration-driven-spatial+valence-specific-supersaturation+authenticated-midrun-activation+phase-resolved-testimony-v5|native-S-oxidation:production-open+O2limited-closed+diagnostic-H-v1|sulphur-bank-HgS:zoned-association-not-S0-substrate-v1|wall-dissolution:atomic-preattack-local-pH+fractional-full-surface-shielding+geodesic-feeder+USGS1248-26C-molar-volume+reported-uncertainty-per1kg+exact-Cartesian-Freudenthal-volume-ledger+validated-depth-closure+capacity-derived-equivalent-diameter+atomic-prerun-creative-reauthoring-v4|solid-occupancy:all-nondissolved+positive-only-size-cap+dissolution-remains-local-mass-balanced+zone-integrated-volume+chalcanthite-local-CuSO4-decay-v2|cavity-seal:repeatable-transition+accepted-dissolution-immediate-below95pct-rearm+same-or-later-refill-testimony-v2|sicily-SDAOM:methane-1C1S+whole-scenario-carbon-ledger-v2|calcite-Mn:manganocalcite-excess<1.2-v1|HMC-solid-solution:Mucci87-seawater-DMgT+MucciMorse83-MgCa7.5..20-seawater25C+unknown-outside+BP89-metastable-miscibility+25C-activity-calibration+bounded-RT-extrapolation+omegaGT1-locality-licensed-heterogeneous-wall-approximation+zone-formula+dynamic-competition-stoichiometry+booked-return-v5|CuZn-carbonates:Alwan80+Kaluza24-observer-only-v1|growth-budget:calibrated-axial-mmolkg+zone-formula-ratio+booked-return-v7|dissolution:LIFO-booked-axial-inventory+5um-floor-v2|dissolution-overprint:flat-face-rate+coupled-return-dGgate+render-geometry+enforced-booked-return+replay-healing-v3|fluorite-etch:Godinho12-{100}-21C-pH3.6-I0.05-468h+Cama-dG<=-7+NaCl-closed-analogue+250x-schematic-pores-v3|carbonate-boundary:conserved-only+explicit-initial-DIC-alk+fail-closed-open-reservoir+sabkha-recharge+zero-charge+truthful-reverse-flow-v3|engine-fluid:transactional-staged-crystal+actual-supplement+Au-ledger-v3|beryl:K36-postHF-recovery-v1|halite:vadose-propensity0.8-v1|borax-tincalconite:pure60.8C+halite-sat39.6C-oneway-v1|competition:accepted-axial-timescale+actual-zone-formula+residual-round-redistribution+single-evaluation-full-fill-negative-v5|thermal-field:LTE-voxel+geometry-weighted-finite-volume-k<=1/6+order-independent-sources+rock-boundary+per-voxel-one-way-authored-ambient+pause-retain+local-nucleation-growth-morphology+replay-v3|diagnosis:production-nucleator+local-max-context+causal-supersat+calibrated-budget-v5|scenario-contracts:headline-deterministic+accessory-deterministic-with-rationale+3seed-statistical+aspirational+fail-closed-four-tier-locality-license+owner-bound-events+canonical-locality-event-deep-match+causal-event-prerequisite+valence-correct-commissioning-reconciliation-v10|bingham:RedmondEinaudi10-pulsed-hypogene+copper-history-before-gold+gold-aspirational-without-bornite+step85-exhumation+P0.001kbar+35to25C+no-reheat+supergene-malachite-v3|bisbee:Graeme-district+post-mining-inventories+alunite-statistical+jarosite-deterministic+siderite-aspirational+zero-CoNi+8-locality-exclusions+no-forced-halite-brine-v3|tsumeb:TSNB159-confirmed-gypsum-recharge+TSNB301-questionable-rhodochrosite-excluded-v1|wittichen:authored-cooling-through-step170+ambient-thermal-pulses-disabled+step170-vadose-boundary+oxidized-sulfate-does-not-sulfidize-silver-v3|weathering-epilogue:strict-normalized-schema+inclusive-bounded-window+invalid-product-block+authored-drainage+3D-vadose+S-conserved+O2-receipt+CO2-light+same-site-precursor-history-v2|cation-sinks:accepted-shell-return-only+schneeberg-zero-Zn-all-step-finite-voxel-receipt+pharmacolite-dissolved-molar-cation-proxy+48-field-consumer-audit-v2|koettigite:Ciesielczuk20-pH<3+dissolved-molar-Zn-majority-proxy+Co-solid-solution+Hill79-Ni<=5molpct+Bowell14-Tsumeb-third-zone-only-v3|roughton-gill:Bridges11-quartz-carbonate-primary+carbonate-buffered-malachite-cerussite+silica-hemimorphite+step215-pyromorphite-encrusting-plumbogummite+signed-boundary-receipts-v3|run-testimony:actual-step+sample-index+nucleation+positive-layer-formula+habit-extent+hydration-transfer+competition-allocation+solid-solution+CDR+controlled-production-engine-witness+solid-state-transformation+null-confining-pressure-v5|locality-boundary:authored-pH-buffer+heat-only-ambient-pulse+creative-exact-authority-v1|crystal-size:individual-record-vs-aggregate-habit+celestine46cm+unresolved-wulfenite-v1|replacement:actual-parent-loss+matching-route-trigger+outline-inheritance-v1|transformation-reactivity:product-only-acid-retreat+LIFO-booked-return+explicit-light-realgar+authenticated-controlled-product-witness-v2|agent-runtime:explicit-sulfur-valence+ambiguous-S-rejected+owner-bound-MVT-90sulfide-30sulfate+narrow-parity-v1|deccan:Savda-Nashik-silica+scolecite-mesolite+heulandite-stilbite+apophyllite-v2|transition-locality-exclusion:target-gated-v1|evidence-binding:exact-browser-dist-runtime-data+producer-contracts+timestamp-free-strips+mechanism-witness-artifact+aggregate-artifact-sha256-v3|save-identity:version+model+scenario+voxel-fluids+dedicated-rng+nucleation-shared-seed+movement-state+water-height+full-zone-ledgers+cavity-evolution-chain+wall-depths+replay-cursor-fail-closed-v5
**Scenario spec hash:** 9f6246a1f25d44657b9022459c47d32750b1ece66d7e95bed0ff53f9715383d4
**Archived strip SHA-256:** e36f1d0bdad0074bd1cff6a0123652590a3883d911b1e1c970044fbfdbe74ea7

## Model boundary: calibrated growth budget
  - Kind: calibrated stoichiometric axial-growth budget proxy
  - Basis: 0.00008 mmol formula/kg solvent per accepted axial micrometre
  - Preserves: formula mole ratios and exact closure of booked inventory on dissolution
  - Limitation: not physical solid mass or volume; demand is independent of crystal size, habit, density, and rendered shell volume

## Expectation contract
**Deterministic headline (12):** uraninite, torbernite, zeunerite, autunite, uranospinite, native_bismuth, native_arsenic, erythrite, annabergite, cobaltite, nickeline, cassiterite
**Deterministic accessories (19):** argentite — A plausible high-temperature Ag2S precursor in Schneeberg's Ag-Co-Ni-As vein assemblage.; feldspar — A subordinate pegmatitic wall-rock/gangue phase in the primary vein stage.; morganite — A plausible Be-bearing pegmatite accessory, non-diagnostic beside the uranium-arsenate suite.; quartz — Fundamental vein and pegmatite gangue reproduced in all three evidence seeds; retained as an accessory because the headline contract emphasizes ore and supergene phases.; spodumene — A plausible Li-aluminosilicate accessory in the evolved pegmatitic host.; arsenopyrite — A legitimate primary Fe-As sulfide precursor to the oxidized arsenate assemblage.; topaz — A plausible F-Al pegmatite accessory in the primary stage.; proustite — A classic ruby-silver sulfosalt accessory in an Ag-As vein district.; tennantite — A plausible As-bearing fahlore in the primary polymetallic stage.; naumannite — A plausible Ag selenide accessory in the Se-bearing five-element vein system.; native_silver — A documented-style accessory of Schneeberg's historic silver veins.; acanthite — The low-temperature Ag2S polymorph is a plausible product as the silver vein cools and oxidizes.; chrysocolla — A plausible secondary Cu-silica product in the meteoric oxidation interval.; brochantite — A plausible secondary Cu sulfate after sulfide oxidation.; cuprite — A plausible Cu oxide in the supergene zone.; uranophane — A common secondary uranyl silicate permitted after uraninite oxidation.; goethite — A characteristic Fe-oxyhydroxide of the oxidized vein cap.; metatorbernite — A plausible dehydration product of torbernite during the late vadose interval.; metazeunerite — A plausible dehydration product of zeunerite during the late vadose interval.
**Statistical (2):** pharmacolite — A hydrated Ca arsenate is geologically appropriate in the Schneeberg oxidation suite, but it occurs in only two of the three evidence seeds.; turquoise — A plausible minor Cu-Al phosphate in the phosphate-bearing supergene assemblage; observed in two of three evidence seeds.
**Aspirational (5):** haidingerite — A possible pharmacolite dehydration product, but no executed conversion appeared in the release seed audit for Schneeberg.; realgar — The Handbook of Mineralogy records fine realgar from Schneeberg, but the SIM 268 valence-correct trajectory supplies no reproducible reduced-sulfur window for it.; pararealgar — A light-exposed alteration product remains possible only where a realgar parent exists; the present valence-correct trajectory produces neither parent nor product.; opal — A subordinate hydrated-silica competitor remains plausible in the low-temperature supergene stage, but is absent from all three SIM 272 commissioned seeds.; dioptase — A plausible late Cu silicate remains licensed in silica- and carbonate-bearing oxidized fractures, but is absent from all three SIM 272 commissioned seeds.
**Locality exclusions (0):** (none)

**Cited sources:**
  - Pinch & Wilson 1977 — canonical Schneeberg/Erzgebirge monograph
  - Weisbach 1872 — zeunerite type description (Walpurgis Flacher vein)
  - Weisbach 1873 — uranospinite type description (Weisser Hirsch Mine)
  - Klaproth 1789 — uranium discovery in Schneeberg pitchblende
  - research/minerals/research-uranospinite.md (May 2026) — cation-fork mechanic + paragenesis

**Claim-level citations:**
  - (none authored)

## Paragenetic order as grown (33 species)
| # | mineral | first step | nucleations | transformations | pathway |
|--|--|--|--|--|--|
| 1 | argentite | 1 | 4 | 0 | nucleation |
| 2 | feldspar | 1 | 2 | 0 | nucleation |
| 3 | morganite | 1 | 1 | 0 | nucleation |
| 4 | quartz | 1 | 3 | 0 | nucleation |
| 5 | spodumene | 1 | 1 | 0 | nucleation |
| 6 | uraninite | 1 | 3 | 0 | nucleation |
| 7 | arsenopyrite | 4 | 4 | 0 | nucleation |
| 8 | cobaltite | 4 | 4 | 0 | nucleation |
| 9 | nickeline | 4 | 4 | 0 | nucleation |
| 10 | cassiterite | 6 | 4 | 0 | nucleation |
| 11 | topaz | 7 | 2 | 0 | nucleation |
| 12 | tennantite | 20 | 1 | 0 | nucleation |
| 13 | proustite | 21 | 2 | 0 | nucleation |
| 14 | native_arsenic | 37 | 3 | 0 | nucleation |
| 15 | native_bismuth | 70 | 1 | 0 | nucleation |
| 16 | naumannite | 70 | 2 | 0 | nucleation |
| 17 | native_silver | 71 | 3 | 0 | nucleation |
| 18 | acanthite | 75 | 1 | 4 | nucleation; argentite -> acanthite |
| 19 | chrysocolla | 88 | 5 | 0 | nucleation |
| 20 | cuprite | 90 | 1 | 0 | nucleation |
| 21 | brochantite | 91 | 4 | 0 | nucleation |
| 22 | turquoise | 91 | 2 | 0 | nucleation |
| 23 | torbernite | 94 | 1 | 0 | nucleation |
| 24 | annabergite | 105 | 1 | 0 | nucleation |
| 25 | erythrite | 105 | 1 | 0 | nucleation |
| 26 | uranophane | 105 | 3 | 0 | nucleation |
| 27 | goethite | 110 | 3 | 0 | nucleation |
| 28 | zeunerite | 110 | 4 | 0 | nucleation |
| 29 | autunite | 131 | 4 | 0 | nucleation |
| 30 | pharmacolite | 145 | 5 | 0 | nucleation |
| 31 | uranospinite | 145 | 4 | 0 | nucleation |
| 32 | metatorbernite | 149 | 0 | 1 | torbernite -> metatorbernite |
| 33 | metazeunerite | 149 | 0 | 4 | zeunerite -> metazeunerite |

**Surprises (present but absent from all authored expectation tiers):** (none)
**Deterministic no-shows:** (none)
**Statistical no-shows (non-failing):** (none)
**Aspirational no-shows (non-failing):** haidingerite, realgar, pararealgar, opal, dioptase
**Excluded-locality appearances (failing):** (none)

## Environment trajectory (first → last, [min,max])
  - T: 448.2608943547082 → 18 °C  [18, 448.2608943547082] (raw_simulation_state)
  - pH: 6.5 → 6   [6, 6.5] (raw_simulation_state)
  - Eh: -200 → 322.1090020413224 mV  [-200, 322.1090020413224] (raw_simulation_state)
  - salinity: 6 → 6 psu  [6, 6] (raw_simulation_state)
  - O2: 0.015848931924611134 → 1.8 ppm (mg/kg solvent)  [0.015848931924611134, 1.8] (raw_simulation_state)
  - concentration: 1 → 3 ×  [1, 3] (raw_simulation_state)

## Saturation drivers
  - SI_calcite: -5.165 → -4.535  [-5.165, -3.465]
  - SI_aragonite: -5.165 → -4.598  [-5.165, -3.528]
  - SI_dolomite: -8 → -8  [-8, -7.181]
  - SI_HMC: -3.78 → -3.276  [-3.843, -2.268]
  - SI_siderite: -2.268 → -2.583  [-2.583, -0.882]
  - SI_selenite: -8 → -1.764  [-8, -1.764]
  - SI_anhydrite: -8 → -3.15  [-8, -2.016]
  - SI_barite: -8 → -8  [-8, -8]
  - SI_celestine: -8 → -8  [-8, -8]

## Authored pressure/stress/phase context (claim, not run testimony)
  - Fluid pressure: 1.5 kbar — cavity-fluid pressure; never silently substituted for rock pressure or differential stress
  - Rock pressure: unspecified kbar — unspecified; metamorphic phase field is reported unconstrained
  - Calcite/aragonite boundary: 4.182 kbar; secure aragonite=false
  - Al2SiO5: unconstrained (nominal n/a) — Rock/confining pressure is not specified; fluid pressure cannot substitute for it.
  - Gypsum/anhydrite pure-water boundary: 80.05 °C; initial a_w=0.996 ±0.020 (temperature-extrapolation)
  - Ksp pressure rule: reaction-specific SUPCRTBL delta-logK grid; bilinear only inside density and per-reaction temperature masks; no constant reaction-volume proxy
    - calcite: temperature-clamped-to-envelope; active=true; ΔlogK=1.2135171; Requested 450 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - aragonite: temperature-clamped-to-envelope; active=true; ΔlogK=1.1560541949999998; Requested 450 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - dolomite: temperature-clamped-to-envelope; active=true; ΔlogK=3.35691121; Requested 450 C is outside this reaction's 10-250 C fitted envelope; the nearest 250 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - siderite: temperature-clamped-to-envelope; active=true; ΔlogK=1.35673509; Requested 450 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - rhodochrosite: temperature-clamped-to-envelope; active=true; ΔlogK=1.29671113; Requested 450 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - anhydrite: temperature-clamped-to-envelope; active=true; ΔlogK=2.187308405; Requested 450 C is outside this reaction's 10-300 C fitted envelope; the nearest 300 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - barite: temperature-clamped-to-envelope; active=true; ΔlogK=2.07504555; Requested 450 C is outside this reaction's 10-300 C fitted envelope; the nearest 300 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - celestine: temperature-clamped-to-envelope; active=true; ΔlogK=1.081745415; Requested 450 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - selenite: unsupported-reaction; active=false; ΔlogK=0; Gypsum is absent from the SUPCRTBL solid-species set; the Hardie water-activity/temperature phase selector remains active, but no Ksp pressure correction is fabricated.
  - Differential stress: no authored stress event.

## Executed pressure/stress/phase testimony (archived run)
**Source:** archived executed run state; not reconstructed from scenario definition
  - Fluid pressure: 1.5 → 1.5 kbar [1.5, 1.5], n=160
  - Rock/confining pressure: not recorded
  - Temperature: 448.2608943547082 → 18 °C [18, 448.2608943547082], n=160
  - Secure aragonite assessment: 0/160 executed steps; first={"boundary_kbar":4.159402232773252,"secure_aragonite":false}, last={"boundary_kbar":3.04181614,"secure_aragonite":false}
  - Al2SiO5 executed phase counts: {"unconstrained":160}; first=unconstrained, last=unconstrained
  - Executed stress: no stress event recorded by the run.
  - Transformation step 75: argentite → acanthite (paramorph); dehydration=null; phase-replacement=null
  - Transformation step 75: argentite → acanthite (paramorph); dehydration=null; phase-replacement=null
  - Transformation step 75: argentite → acanthite (paramorph); dehydration=null; phase-replacement=null
  - Transformation step 75: argentite → acanthite (paramorph); dehydration=null; phase-replacement=null
  - Transformation step 149: torbernite → metatorbernite (dry-exposure); dehydration={"schema":"dehydration-transformation-v1","step":149,"from":"torbernite","to":"metatorbernite","driver":"dry-exposure","temperature_C":18.00000000000074,"temperature_threshold_C":75,"water_state":"vadose","water_activity":0.9964,"concentration":3,"formula_amount_mmol_kg":0.054127395668125404,"hydration_water_per_formula":4,"hydration_water_released_mmol_kg":0.21650958267250162,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 149: zeunerite → metazeunerite (dry-exposure); dehydration={"schema":"dehydration-transformation-v1","step":149,"from":"zeunerite","to":"metazeunerite","driver":"dry-exposure","temperature_C":18.00000000000074,"temperature_threshold_C":75,"water_state":"vadose","water_activity":0.9964,"concentration":3,"formula_amount_mmol_kg":0.053861100406681045,"hydration_water_per_formula":4,"hydration_water_released_mmol_kg":0.21544440162672418,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 152: zeunerite → metazeunerite (dry-exposure); dehydration={"schema":"dehydration-transformation-v1","step":152,"from":"zeunerite","to":"metazeunerite","driver":"dry-exposure","temperature_C":18.00000000000074,"temperature_threshold_C":75,"water_state":"vadose","water_activity":0.9964,"concentration":3,"formula_amount_mmol_kg":0.04338897492624915,"hydration_water_per_formula":4,"hydration_water_released_mmol_kg":0.1735558997049966,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 153: zeunerite → metazeunerite (dry-exposure); dehydration={"schema":"dehydration-transformation-v1","step":153,"from":"zeunerite","to":"metazeunerite","driver":"dry-exposure","temperature_C":18.00000000000074,"temperature_threshold_C":75,"water_state":"vadose","water_activity":0.9964,"concentration":3,"formula_amount_mmol_kg":0.04493993051018038,"hydration_water_per_formula":4,"hydration_water_released_mmol_kg":0.17975972204072152,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 154: zeunerite → metazeunerite (dry-exposure); dehydration={"schema":"dehydration-transformation-v1","step":154,"from":"zeunerite","to":"metazeunerite","driver":"dry-exposure","temperature_C":18.00000000000074,"temperature_threshold_C":75,"water_state":"meniscus","water_activity":0.9964,"concentration":1,"formula_amount_mmol_kg":0.03891109965952549,"hydration_water_per_formula":4,"hydration_water_released_mmol_kg":0.15564439863810195,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation reactivity commissioning: controlled production-engine boundary; not a locality trajectory; artifact vugg-mechanism-witnesses-v1/23bade18c1f579f7afdbbe5a8a19318ab3e4ab79641548cf4359a550b1589a83.
    - meta-autunite: neutral positive growth=false; acid boundary pH 4.5, control pH 4.4; etch=-0.24 µm; formula={"Ca":1,"U":2,"P":2}; returned={"Ca":0.00076953600000013,"U":0.009140352000000006,"P":0.0011892480000001342}; closure error={"Ca":6.9349907760862806e-15,"U":2.843211777125987e-15,"P":2.7285031872770205e-15}.
    - metatorbernite: neutral positive growth=false; acid boundary pH 5, control pH 4.9; etch=-0.24 µm; formula={"Cu":1,"U":2,"P":2}; returned={"Cu":0.0012201599999998507,"U":0.009140352000000006,"P":0.0011892480000001342}; closure error={"Cu":2.7285031872770205e-15,"U":2.843211777125987e-15,"P":2.7285031872770205e-15}.
    - metazeunerite: neutral positive growth=false; acid boundary pH 5, control pH 4.9; etch=-0.24 µm; formula={"Cu":1,"U":2,"As":2}; returned={"Cu":0.0012201599999998507,"U":0.009140352000000006,"As":0.0028769280000000208}; closure error={"Cu":2.7285031872770205e-15,"U":2.843211777125987e-15,"As":6.252810769158401e-15}.
  - Conserved carbonate boundary: not enabled for this archived run.

## Declared non-sulfur fluid-boundary transactions (archived run)
**Source:** archived declared non-sulfur fluid-boundary transactions; exact rows are authenticated by the strip SHA-256
  - No declared non-sulfur fluid-boundary transaction was executed.

## Sulfur reservoir identity and conservation (archived run)
**Source:** archived phase-resolved sulfur ledger; exact samples are authenticated by the strip SHA-256
  - Sulfur ledger: explicit valence-resolved sulfur pools were not enabled for this scenario.

## Layer, solid-solution, competition, and habit testimony
  - Accepted layers: 3241; formula-bearing=0; solid-solution=0; binding competition=0; reactive transformation etches=0; masked horizons=0.
  - Habit crystal 1: uraninite; pitchblende_massive; extent=individual; forms=["botryoidal masses","colloform banding"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 2: quartz; Tessin; extent=individual; forms=["steep {40-41}/{30-31} rhombohedra dominant","subordinate m{10-10} prism","slender tapered termination"]; size authority={"extent_kind":"individual","cap_cm":1200,"record_cm":600}; CDR=null.
  - Habit crystal 3: feldspar; prismatic; extent=individual; forms=["{010} pinacoid","{001} pinacoid","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":1400,"record_cm":700}; CDR=null.
  - Habit crystal 4: spodumene; kunzite; extent=individual; forms=["m{110} prism","a{100} + b{010} pinacoids","{110}∧{1̄10} ≈87° cleavages","flattened tabular \"book\""]; size authority={"extent_kind":"individual","cap_cm":1400,"record_cm":700}; CDR=null.
  - Habit crystal 5: morganite; tabular_hex; extent=individual; forms=["m{10̄10} hex prism","c{0001} flat pinacoid","classic hexagonal"]; size authority={"extent_kind":"individual","cap_cm":80,"record_cm":40}; CDR=null.
  - Habit crystal 6: acanthite; massive_granular; extent=individual; forms=["granular vein filling","disseminated"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 7: uraninite; pitchblende_massive; extent=individual; forms=["botryoidal masses","colloform banding"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 8: feldspar; prismatic; extent=individual; forms=["{010} pinacoid","{001} pinacoid","{110} prism"]; size authority={"extent_kind":"individual","cap_cm":1400,"record_cm":700}; CDR=null.
  - Habit crystal 9: acanthite; massive_granular; extent=individual; forms=["granular vein filling","disseminated"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 10: uraninite; pitchblende_massive; extent=individual; forms=["botryoidal masses","colloform banding"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 11: quartz; Tessin; extent=individual; forms=["steep {40-41}/{30-31} rhombohedra dominant","subordinate m{10-10} prism","slender tapered termination"]; size authority={"extent_kind":"individual","cap_cm":1200,"record_cm":600}; CDR=null.
  - Habit crystal 12: arsenopyrite; massive_granular; extent=individual; forms=["granular masses","metallic silver-white"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 13: nickeline; columnar; extent=individual; forms=["{0001} columnar","vertical aggregate"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 14: cobaltite; massive_granular; extent=individual; forms=["granular","tin-white-with-pink-blush"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 15: quartz; Tessin; extent=individual; forms=["steep {40-41}/{30-31} rhombohedra dominant","subordinate m{10-10} prism","slender tapered termination"]; size authority={"extent_kind":"individual","cap_cm":1200,"record_cm":600}; CDR=null.
  - Habit crystal 16: cassiterite; equant_octahedral; extent=individual; forms=["{110} prism","{100} pinacoid","equant blocky"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 17: arsenopyrite; massive_granular; extent=individual; forms=["granular masses","metallic silver-white"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 18: topaz; columnar_f_rich; extent=individual; forms=["m{110} prism","y{041} pyramid","{021} pyramid"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 19: cassiterite; equant_octahedral; extent=individual; forms=["{110} prism","{100} pinacoid","equant blocky"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 20: arsenopyrite; massive_granular; extent=individual; forms=["granular masses","metallic silver-white"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 21: arsenopyrite; massive_granular; extent=individual; forms=["granular masses","metallic silver-white"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 22: cassiterite; equant_octahedral; extent=individual; forms=["{110} prism","{100} pinacoid","equant blocky"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 23: acanthite; massive_granular; extent=individual; forms=["granular vein filling","disseminated"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 24: acanthite; massive_granular; extent=individual; forms=["granular vein filling","disseminated"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 25: cassiterite; equant_octahedral; extent=individual; forms=["{110} prism","{100} pinacoid","equant blocky"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 26: cobaltite; massive_granular; extent=individual; forms=["granular","tin-white-with-pink-blush"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 27: tennantite; massive; extent=individual; forms=["{111} tetrahedron","gray-black metallic with cherry-red transmission"]; size authority={"extent_kind":"individual","cap_cm":12,"record_cm":6}; CDR=null.
  - Habit crystal 28: proustite; acute_prismatic; extent=individual; forms=["{1010} acute prism","rhombohedral termination"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 29: nickeline; columnar; extent=individual; forms=["{0001} columnar","vertical aggregate"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 30: proustite; acute_prismatic; extent=individual; forms=["{1010} acute prism","rhombohedral termination"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 31: nickeline; columnar; extent=individual; forms=["{0001} columnar","vertical aggregate"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 32: nickeline; columnar; extent=individual; forms=["{0001} columnar","vertical aggregate"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 33: cobaltite; massive_granular; extent=individual; forms=["granular","tin-white-with-pink-blush"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 34: topaz; stubby_equant; extent=individual; forms=["m{110} prism","steep {021}+{041} pyramids","c{001} basal cleavage"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 35: cobaltite; massive_granular; extent=individual; forms=["granular","tin-white-with-pink-blush"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 36: native_arsenic; arsenolamprite; extent=individual; forms=["Bi-rich orthorhombic As","lamellar"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 37: native_arsenic; arsenolamprite; extent=individual; forms=["Bi-rich orthorhombic As","lamellar"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 38: native_arsenic; arsenolamprite; extent=individual; forms=["Bi-rich orthorhombic As","lamellar"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 39: native_bismuth; massive_granular; extent=individual; forms=["massive/foliated silver-white veinlet"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 40: naumannite; cubic_high_T; extent=individual; forms=["cubic Ag2Se (high-T phase, ionic conductivity 2 S/cm)"]; size authority={"extent_kind":"individual","cap_cm":1,"record_cm":0.5}; CDR=null.
  - Habit crystal 41: native_silver; dendritic; extent=individual; forms=["dendritic plates","fern-like branches"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 42: native_silver; dendritic; extent=individual; forms=["dendritic plates","fern-like branches"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 43: native_silver; dendritic; extent=individual; forms=["dendritic plates","fern-like branches"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 44: acanthite; massive_granular; extent=individual; forms=["granular vein filling","disseminated"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 45: naumannite; cubic_high_T; extent=individual; forms=["cubic Ag2Se (high-T phase, ionic conductivity 2 S/cm)"]; size authority={"extent_kind":"individual","cap_cm":1,"record_cm":0.5}; CDR=null.
  - Habit crystal 46: chrysocolla; reniform_globules; extent=individual; forms=["reniform globule cluster","glassy conchoidal fracture"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 47: cuprite; octahedral; extent=individual; forms=["{111} octahedron","dark red to black with ruby internal reflection"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 48: turquoise; nodular_massive; extent=individual; forms=["rounded blue lump in matrix"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 49: chrysocolla; reniform_globules; extent=individual; forms=["reniform globule cluster","glassy conchoidal fracture"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 50: brochantite; acicular_tuft; extent=individual; forms=["radiating acicular needle-tufts"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 51: chrysocolla; enamel_on_cuprite; extent=individual; forms=["thin conformal film"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 52: metatorbernite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 53: chrysocolla; enamel_on_cuprite; extent=individual; forms=["thin conformal film"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 54: turquoise; nodular_massive; extent=individual; forms=["rounded blue lump in matrix"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 55: chrysocolla; reniform_globules; extent=individual; forms=["reniform globule cluster","glassy conchoidal fracture"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 56: erythrite; botryoidal_crust; extent=individual; forms=["botryoidal rounded aggregates","pink-red crust"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 57: annabergite; co_bearing; extent=individual; forms=["pinkish-green intermediate crust"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 58: uranophane; acicular_starburst; extent=individual; forms=["radiating needles 0.1-5 mm","star-shaped clusters in vugs"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 59: uranophane; oxidation_front_replacement; extent=individual; forms=["acicular sprays at oxidation front","replacing U(IV) primary"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 60: uranophane; oxidation_front_replacement; extent=individual; forms=["acicular sprays at oxidation front","replacing U(IV) primary"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 61: brochantite; acicular_tuft; extent=individual; forms=["radiating acicular needle-tufts"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 62: goethite; botryoidal; extent=individual; forms=["grape-like clusters","reniform masses"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 63: metazeunerite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 64: brochantite; acicular_tuft; extent=individual; forms=["radiating acicular needle-tufts"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 65: metazeunerite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 66: metazeunerite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 67: metazeunerite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 68: brochantite; acicular_tuft; extent=individual; forms=["radiating acicular needle-tufts"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 69: goethite; fibrous_acicular; extent=individual; forms=["radiating needles","velvet crust"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 70: autunite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 71: goethite; botryoidal/stalactitic; extent=individual; forms=["botryoidal masses","velvety surfaces"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 72: autunite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 73: autunite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 74: autunite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 75: pharmacolite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 76: uranospinite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 77: pharmacolite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 78: pharmacolite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 79: uranospinite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 80: pharmacolite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 81: pharmacolite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 82: uranospinite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 83: uranospinite; micaceous_book; extent=individual; forms=["stacked tabular plates","subparallel books"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.

## Scenario notes (author's own rationale)
> The mineralogically richest single ore district in Europe — the Erzgebirge had been mined for silver since the 1100s, then bismuth from the 1500s (the very name 'Bismutum' was coined here), then uranium from the 1800s onward. Most autunite-group species were first described from Schneeberg or its sister deposits (Jáchymov, Annaberg). Pinch & Wilson 1977 monographs are the canonical reference.

> Mechanic: 6-event lifecycle walking through cation×anion combinatorics. Pegmatite crystallization (step 20): hot reducing fluid grows uraninite + chalcopyrite + arsenopyrite primaries. Cooling (step 70): T drops to ambient. Cu+P phase (step 85): O2 floods, primaries weather, P>As, Cu>Ca → torbernite plates. Cu+As pulse (step 105): As replenishes from arsenopyrite weathering, Cu still high → zeunerite plates. Cu depletion (step 125): Cu consumed by both Cu-cation secondaries; Ca rises from carbonate dissolution → autunite plates. As pulse late (step 145): As replenishes again, Ca dominant → uranospinite plates.

> First scenario to fire all 4 P/As-branch uranyl species (torbernite, autunite, zeunerite, uranospinite) in a single run. The cation+anion fork mechanic introduced by Rounds 9b-9e is finally exercised end-to-end. Uraninite weathers as the v12 gatekeeper feedstock event.

> Bismuthinite status (SIM 241 audit): geologically licensed but not an expected species. It occurred in the v240 seed-42 run and in none of five sampled SIM 241 seeds. This disappearance is recorded as an unretuned consequence of the corrected growth-budget/competition model; native_bismuth remains the expected Bi phase. Do not restore bismuthinite through scoreboard tuning.
